# cursed_life

./: Cargo.toml  README.md
src/: main.rs
