[package]
name = "cursed_life"
version = "0.13.1"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"


[dependencies.pancurses]
version = "0.16"
features = ["win32"]


[profile.release]
lto = true
opt-level = 3
