[package]
name = "cursed_life"
version = "0.14.0"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
crossterm = "0.17"


[profile.release]
lto = true
opt-level = 3
